ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/important-safety-information.css
+++ b/styles/important-safety-information.css
@@ -22,3 +22,9 @@ header.site-header {
     color: var(--white);
   }
 }
+
+@media (min-width: 992px) {
+  .site-header .container .d-flex.jcnt-end .logo {
+    margin-left: 0;
+  }
+}
